--- a/home.html
+++ b/home.html
@@ -38,8 +38,8 @@
                 <h1 class="slide-in">Find the Perfect Freelancer for Your Project</h1>
                 <p class="fade-in">Connect with skilled professionals, collaborate seamlessly, and bring your ideas to life.</p>
                 <div class="cta-buttons fade-in">
-                    <button class="hire-btn">Hire Talent</button>
-                    <button class="work-btn">Find Work</button>
+                    <a href="client_dash.php"><button class="hire-btn">Hire Talent</button></a>
+                    <a href="freelancer_dash.php"><button class="work-btn">Find Work</button></a>
                 </div>
             </div>
             <div class="hero-image fade-in">
@@ -75,7 +75,6 @@
         </div>
     </section>
 
-    <!-- How It Works Section -->
     <section id="how-it-works" class="how-it-works">
         <h2 class="section-title">How It Works</h2>
         <div class="steps-container">
@@ -102,7 +101,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-section">
